--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <script src="/link-fixup.js" defer></script>
 <title>404 Not Found</title>
 <style>
@@ -21,3 +21,5 @@
  If you found a broken link from another site pointing to the WHATWG site,
  please let that site know of the problem instead. Thanks!</p>
 </div>
+  </body>
+  </html>
